k8s-specs/clientservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientservice
  template:
    metadata:
      labels:
        app: clientservice
    spec:
      containers:
      - name: clientservice
        image:  registry.dev.svc.cluster.local:5000/clientservice
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: clientservice
spec:
  selector:
    app: clientservice
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
