k8s-specs/gatewayservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
      - name: gatewayservice
        image: registry.dev.svc.cluster.local:5000/gatewayservice
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
spec:
  selector:
    app: gatewayservice
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
