k8s-specs/locationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locationservice
  template:
    metadata:
      labels:
        app: locationservice
    spec:
      containers:
      - name: locationservice
        image: registry.dev.svc.cluster.local:5000/locationservice
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: locationservice
spec:
  selector:
    app: locationservice
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
