k8s-specs/service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientservice
  namespace: default
spec:
  selector:
    app: clientservice
  ports:
    - name: http          
      port: 8081
      targetPort: 8081
  type: ClusterIP
