k8s-specs/vehiculeservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehiculeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehiculeservice
  template:
    metadata:
      labels:
        app: vehiculeservice
    spec:
      containers:
      - name: vehiculeservice
        image: registry.dev.svc.cluster.local:5000/vehiculeservice
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: vehiculeservice
spec:
  selector:
    app: vehiculeservice
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
