k8s-specs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gateway.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewayservice
            port:
              number: 8080
